syntax = "proto3";

option go_package = "./";

package kvstore;

service KeyValueStore {
  // 存储键值对
  rpc Put (PutRequest) returns (PutResponse) {}
  
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  bool success = 1;
}
